tests/fsharp/core/state-machines/neg-resumable-02.bsl

neg-resumable-02.fsx(22,9,32,54): ilxgen error FS3512: This state machine is not statically compilable and no alternative is available. A 'let rec' occured in the resumable code specification. Use an 'if __useResumableCode then <state-machine> else <alternative>' to give an alternative.

neg-resumable-02.fsx(75,9,75,13): ilxgen error FS3511: This state machine is not statically compilable. A 'let rec' occured in the resumable code specification. An alternative dynamic implementation will be used, which may be slower. Consider adjusting your code to ensure this state machine is statically compilable, or else suppress this warning.
